# MLOPs_project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  evaluate.sh  pyproject.toml  requirements.txt  run.sh
.agent/rules/: pyright.md  pytest.md  ruff.md  uv.md
.github/workflows/: main.yml
configs/: wandb_config.yaml
k8s/: deployment.yaml  service.yaml
models/: __init__.py  adaptive_attention_model.py  multi_sequence_fusion_model.py  pathology_aware_attention.py  pathology_model.py  pfirrman_model.py  transformer_fusion_model.py
scripts/: cleanup_wandb_staging.py  eda_analysis.py  error_analysis_pathology.py  evaluate_ensemble.py  evaluate_pathology_model.py  evaluate_pfirrman_model.py  extract_feature_maps.py  fetch_all_wandb_projects.py  inference.py  paper_eda_analysis.py  train_pathology_model.py  train_pfirrman_model.py
serving/: app.py
training/: pathology_training_utils.py  pfirrman_training_utils.py  train_with_wandb.py
utils/: attention_utils.py  data_preprocessing.py  dataset.py  dicom_utils.py  figure_utils.py  label_utils.py  loss_utils.py  multi_sequence_dataset.py  pfirrman_dataset.py  threshold_utils.py  tta_utils.py  wandb_utils.py
